src/assets/style/service/service-stream.scss
.main-video {
  position: relative;
  flex: 1;
  width: 100%;
  height: calc(100% - #{$tool_height});
}

.main-video__sharing-user {
  display: none;
}

.main-video__pointing {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  max-width: 100%;
  height: 100%;
  max-height: 100%;
}
.main-video__box {
  position: relative;
  top: 50%;
  max-width: 100%;
  max-height: 100%;
  margin: auto;
  transform: translateY(-50%);
  &.hidden {
    opacity: 0;
  }
  // border: solid 1px #ddd;
  > video {
    width: 100%;
    height: 100%;
  }

  &.shutter::after {
    position: absolute;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1;
    background-color: #fff;
    opacity: 0;
    animation: shutter 0.2s linear;
    content: "";
    user-select: none;

    @keyframes shutter {
      0% {
        opacity: 0;
      }
      40% {
        opacity: 0.52;
      }
      60% {
        opacity: 0.52;
      }
      100% {
        opacity: 0;
      }
    }
  }
}

.main-video__sharing {
  position: absolute;
  top: 1rem;
  left: 1rem;
  z-index: 10;
}
.btn.main-video__sharing-button {
  min-width: auto;
  padding: 0.5rem 0.714rem 0.5rem;
  font-size: 1rem;
  background-color: #eb001d;
  border-radius: 4px;
  pointer-events: none;
  &.active {
    position: relative;
    padding-left: 1.929rem;
    pointer-events: auto;
    &:focus {
      background-color: #eb001d;
    }
    &:hover,
    &:active {
      background-color: #c40018;
    }
    &:before {
      position: absolute;
      top: 0;
      left: 0.429rem;
      width: 1.429rem;
      height: 100%;
      background: url("~assets/image/call/ic-close-w.svg") no-repeat center/100%;
      content: "";
    }
  }
}

.main-video__recording {
  position: absolute;
  top: 1rem;
  right: 1rem;
  z-index: 2;
  display: flex;
}

.main-video__recording--time {
  width: 5.8571rem;
  height: 2.4286rem;
  margin-left: 0.5714rem;
  background: rgba($color_darkgray_1000, 0.6);
  border-radius: 4px;

  & > p {
    margin-left: 0.7143rem;
    padding: 0.3571rem 0rem 0.5rem 0.7143rem;
    color: $color_white;
    font-size: 1rem;
    text-align: center;
    background: 0 center/1.2857rem no-repeat;
    &.server {
      background-image: url(~assets/image/call/ic_record_ing.svg);
    }
    &.local {
      background-image: url(~assets/image/call/ic_local_record_on.svg);
    }
  }
}

.main-video__empty {
  position: absolute;
  top: 0;
  left: 50%;
  // left: 0;
  display: flex;
  width: 90%;
  height: 100%;
  // margin: 0 auto;
  background-color: $color_darkgray;
  transform: translateX(-50%);
}
.main-video__empty-inner {
  margin: auto;
  text-align: center;
  > p {
    color: rgba($color_text_main, 0.7);
    font-weight: 500;
    font-size: 1.286rem;
    &.inner-discription {
      color: rgba($color_text_main, 0.3);
      font-size: 15px;
    }
  }
  > img {
    width: 8.571rem;
    height: 8.571rem;
  }
  &.loading {
    position: absolute;
    top: 0;
    left: 0;
    display: flex;
    width: 100%;
    height: 100%;
    background-color: $color_darkgray;
    > img {
      margin: auto;
    }
  }
}

@include responsive-mobile {
  .main-video {
    display: flex;
    align-items: center;
    height: 100%;
    .main-video__empty {
      width: 100%;
      background-color: $new_color_bg;
    }
  }

  .main-video__sharing-user {
    position: fixed;
    bottom: 14.4rem;
    left: 50%;
    display: block;
    max-width: 21.6rem;
    height: 2.4rem;
    padding: 0.2rem 1.2rem;
    overflow: hidden;
    color: $new_color_text_main;
    text-align: center;
    background-color: rgba($new_color_bg_tab_active_rgb, 0.9);
    border-radius: 12px;
    transform: translateX(-50%);
    @include fontLevel(75);
    @include ellipsis;
  }

  .main-video__box {
    top: unset;
    transform: unset;
  }

  .main-video__recording {
    position: fixed;
    top: 6.8rem;
    right: unset;
    left: 1.6rem;
    transition: left 0.3s;

    &.sharing-on {
      left: 10.3rem;
    }

    .main-video__recording--time {
      display: flex;
      align-items: center;
      width: 7.7rem;
      height: 3rem;
      margin-left: 0;
    }
    .server {
      padding: 0;
      padding-left: 2.6rem;
      background-position-x: 0px;
      background-size: 18px;
      @include fontLevel(100);
    }
  }

  .main-video__sharing {
    position: fixed;
    top: 6.8rem;
    left: 1.6rem;
    width: 7.9rem;
    height: 3rem;
    @include fontLevel(50);

    .main-video__sharing-button.active {
      display: flex;
      align-items: center;
      width: 7.9rem;
      height: 3rem;
      padding: 0;
      padding-left: 8px;
      &::before {
        top: 4.5px;
        right: 8px;
        left: unset;
        width: 1.6rem;
        height: 1.6rem;
        background-size: 130%;
      }
    }
  }

  .main-video__empty-inner {
    > img {
      width: 9.6rem;
      height: 9.6rem;
    }
    > p {
      margin-top: 0.4rem;
      @include fontLevel(200);
      color: $new_color_text_main;
      opacity: 0.5;
    }

    &.loading {
      img {
        margin: 0;
      }
      flex-direction: column;
      align-items: center;
      justify-content: center;
      background-color: $new_color_bg;
    }
  }
}

